--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,11 @@ language: python
 os:
   - linux
 python:
-  - 3.9
+  - 3.7
 install:
   - python -m pip install -U pip
+
+before_script:
+  - pip install -I numpy==1.8.2
 #script:
 #  - python -m pytest ./test/test_vicsek_class.py
