--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
 before_script:
   - pip install -I numpy==1.20.3
 script:
-  - cd ./test/
-  - python test_vicsek_class.py
+  - pytest -v --cov
+#  - cd ./test/
+#  - python test_vicsek_class.py
 #  - python -m pytest ./test/test_vicsek_class.py
