--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ before_script:
   - pip install -I numpy==1.20.3
   - pip install pytest-cov
 script:
-  - pytest -v --cov
+  - pytest -v --cov=./ --cov-report=xml
