--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,6 @@ script:
   - pytest -v --cov=./ --cov-report=xml
 
 after_success:
-    - bash < (curl -s https://codecov.io/bash)
+  - curl -Os https://uploader.codecov.io/latest/linux/codecov 
+  - chmod +x codecov 
+  - ./codecov
